fixed phone alignment of collumns

--- a/style.css
+++ b/style.css
@@ -136,18 +136,17 @@ main a::after {
 }
 
 /* Mobile setup */
-/* Mobile Media Query */
 @media (max-width: 768px) {
   .container {
     width: 80vw;
-    height: auto; /* Adjust container height for mobile */
+    height: 91vh; /* Adjust container height for mobile */
     padding: 1.5rem;
     border-width: 10px; /* Adjust border width */
   }
 
   .ascii-art {
     font-size: 0.8rem; /* Smaller ASCII text */
-    margin: 0.1rem 0 0rem 0; /* Adjust margin */
+    margin: 0.1rem 0 0 0.8rem; /* Adjust margin */
   }
 
   main {
@@ -156,17 +155,25 @@ main a::after {
     font-size: 0.8rem;
     margin: 0 0.2rem 0 0.2rem;
     padding: 0;
-
   }
 
+  .me-list {
+    margin-left: 1rem;
+  }
   .friend-list {
     column-count: 2; /* Stack the friend list in one column on mobile */
-    column-gap: 0;
+    column-gap: 1.8rem;
+    margin-left: 1rem;
   }
 
   .description {
-    width: 100%; /* Full width for description */
+    width: 73vw; /* Full width for description */
     font-size: 0.9rem; /* Adjust font size for readability */
-    margin: 0 0.5rem 0 0.2rem;
+    margin: 0 1rem 0 1rem;
   }
+
+  .description p {
+    margin: 0.6rem 0 0 0
+  }
+
 }
